# pytheme

./: .gitignore  README.md  pyproject.toml
pytheme/: __main__.py  cli.py  message.py  schedule.py  theme.py  utils.py
tests/: __main__.py  test_schedule.py
