[tool.poetry]
name = "pytheme"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pywin32 = "300"
click = "7.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "6.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
